made thumbnails clickable links

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<form id="search-term">
 		<header>
 		<img src="images/youtube.png">
-		<h1>Thumbnail Search</h1></header>
+		<h1>Video Thumbnail Search</h1></header>
 		
 		<input type="text" id="query" name="name">
 		<br>
